# docs/swagger.json
@@ -38,6 +38,37 @@
                 }
             }
         },
+        "/balance/transfer_money": {
+            "post": {
+                "description": "Метод перевода денег от пользователя к пользователю",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "balance"
+                ],
+                "summary": "Перевод денег",
+                "parameters": [
+                    {
+                        "description": "Входные параметры",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/avito2022_internal_app_api.Transfer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/balance/up_balance": {
             "post": {
                 "description": "Пополняет баланс пользователя или создаёт его при первом пополнении",
@@ -66,6 +97,37 @@
                 }
             }
         },
+        "/balance/withdraw_money": {
+            "post": {
+                "description": "Метод снимает указанное количество средств со счёта",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "balance"
+                ],
+                "summary": "Снятие денег со счёта",
+                "parameters": [
+                    {
+                        "description": "Входные параметры",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/avito2022_internal_app_api.DebitingMoney"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/sales/reserve_money": {
             "post": {
                 "description": "Резервирование средств с основного баланса на отдельном счете",
@@ -83,7 +145,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_app_api.Reserve"
+                            "$ref": "#/definitions/avito2022_internal_app_api.Reserve"
                         }
                     }
                 ],
@@ -111,7 +173,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_app_api.Refund"
+                            "$ref": "#/definitions/avito2022_internal_app_api.Refund"
                         }
                     }
                 ],
@@ -139,7 +201,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_app_api.Confirmation"
+                            "$ref": "#/definitions/avito2022_internal_app_api.Confirmation"
                         }
                     }
                 ],
@@ -191,6 +253,17 @@
                 }
             }
         },
+        "avito2022_internal_app_api.DebitingMoney": {
+            "type": "object",
+            "properties": {
+                "debit_cost": {
+                    "type": "number"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "avito2022_internal_app_api.Refund": {
             "type": "object",
             "properties": {
@@ -216,6 +289,26 @@
                 },
                 "user_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "avito2022_internal_app_api.Transfer": {
+            "type": "object",
+            "properties": {
+                "cost": {
+                    "type": "number"
+                },
+                "recipient_id": {
+                    "type": "integer"
+                },
+                "recipient_name": {
+                    "type": "string"
+                },
+                "sender_id": {
+                    "type": "integer"
+                },
+                "sender_name": {
+                    "type": "string"
                 }
             }
         },
@@ -266,6 +359,17 @@
                 }
             }
         },
+        "internal_app_api.DebitingMoney": {
+            "type": "object",
+            "properties": {
+                "debit_cost": {
+                    "type": "number"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "internal_app_api.Refund": {
             "type": "object",
             "properties": {
@@ -291,6 +395,26 @@
                 },
                 "user_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "internal_app_api.Transfer": {
+            "type": "object",
+            "properties": {
+                "cost": {
+                    "type": "number"
+                },
+                "recipient_id": {
+                    "type": "integer"
+                },
+                "recipient_name": {
+                    "type": "string"
+                },
+                "sender_id": {
+                    "type": "integer"
+                },
+                "sender_name": {
+                    "type": "string"
                 }
             }
         },
